--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.haroldohenrique</groupId>
 	<artifactId>revenda_motos</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>revenda_motos</name>
 	<description>Demo project for Spring Boot</description>
 	<url />
