--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -12,5 +12,6 @@ jobs:
         uses: actions/checkout@v3 
       - name: Setup Java
         uses: actions/setup-java@v3
-        with: temurin
-        java-version: 17
+        with: 
+          distribuition: temurin
+          java-version: 17
