--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v3
         with: 
-          distribuition: temurin
+          distribution: temurin
           java-version: 17
