--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -23,3 +23,13 @@ jobs:
         run: docker build -t haroldohenrique/revenda_motos .
       - name: Publish image
         run: docker push haroldohenrique/revenda_motos
+  deploy:
+    needs: build
+    runs-on: self-hosted
+    steps:
+      - name: Pull image docker hub
+        run: docker pull haroldohenrique/revenda_motos:latest
+      - name: remove container
+        run: docker rm -f revenda-motos
+      - name: Run docker container
+        run: docker run -d -p 8080:8080 -e DATABASE_URL=${{secrets.DATABASE_URL}} -e DATABASE_PASSWORD=${{secrets.DATABASE_PASSWORD}} -e DATABASE_USERNAME=${{secrets.DATABASE_USERNAME}} --name revenda-motos haroldohenrique/revenda_motos
